miscellaneous changes